[gd_scene load_steps=10 format=3 uid="uid://d2qcucf4ysu4u"]

[ext_resource type="Script" path="res://inside_levels_h/health_scene.gd" id="1_q87x0"]
[ext_resource type="Texture2D" uid="uid://ycrbum8l1gfo" path="res://assets/sprites/inside_layout_h_14.png" id="2_h7iqj"]
[ext_resource type="PackedScene" uid="uid://cmfscuuy27tuj" path="res://health.tscn" id="3_jebtj"]
[ext_resource type="PackedScene" uid="uid://5pmdmj5q2obg" path="res://enemy.tscn" id="4_0t5l1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hfxq0"]
size = Vector2(28, 276)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l7gwk"]
size = Vector2(1020, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hghu2"]
size = Vector2(1020, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xytps"]
size = Vector2(28, 276)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uxmuf"]
size = Vector2(56, 244)

[node name="inside_level_h_14" type="Node2D"]
script = ExtResource("1_q87x0")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(576, 324)
texture = ExtResource("2_h7iqj")

[node name="walls" type="StaticBody2D" parent="."]
visible = false
collision_layer = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="walls"]
position = Vector2(80, 154)
shape = SubResource("RectangleShape2D_hfxq0")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="walls"]
position = Vector2(80, 494)
shape = SubResource("RectangleShape2D_hfxq0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="walls"]
position = Vector2(576, 10)
shape = SubResource("RectangleShape2D_l7gwk")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="walls"]
position = Vector2(576, 638)
shape = SubResource("RectangleShape2D_hghu2")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="walls"]
position = Vector2(1072, 494)
shape = SubResource("RectangleShape2D_xytps")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="walls"]
position = Vector2(1072, 154)
shape = SubResource("RectangleShape2D_xytps")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="walls"]
position = Vector2(346, 138)
shape = SubResource("RectangleShape2D_uxmuf")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="walls"]
position = Vector2(806, 138)
shape = SubResource("RectangleShape2D_uxmuf")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="walls"]
position = Vector2(806, 510)
shape = SubResource("RectangleShape2D_uxmuf")

[node name="CollisionShape2D10" type="CollisionShape2D" parent="walls"]
position = Vector2(346, 510)
shape = SubResource("RectangleShape2D_uxmuf")

[node name="health" parent="." instance=ExtResource("3_jebtj")]
position = Vector2(427, 72)
scale = Vector2(0.5, 0.5)

[node name="enemy" parent="." instance=ExtResource("4_0t5l1")]
position = Vector2(900, 145)
scale = Vector2(0.7, 0.7)

[node name="enemy2" parent="." instance=ExtResource("4_0t5l1")]
position = Vector2(243, 112)
scale = Vector2(0.7, 0.7)

[node name="enemy3" parent="." instance=ExtResource("4_0t5l1")]
position = Vector2(661, 545)
scale = Vector2(0.7, 0.7)

[connection signal="body_entered" from="health" to="." method="_on_health_body_entered"]
[connection signal="hit" from="enemy" to="." method="_on_enemy_hit"]
[connection signal="hit" from="enemy2" to="." method="_on_enemy_hit"]
[connection signal="hit" from="enemy3" to="." method="_on_enemy_hit"]
